# memorial-ai

./: .env.example  .gitignore  .prettierignore  DEVELOPMENT.md  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json
client/: index.html  package.json  tailwind.config.js
client/src/: App.tsx  index.css
client/src/components/: Aurora.tsx  Page.tsx
client/src/hooks/: useJob.ts
client/src/lib/: motion.ts
client/src/pages/: Create.tsx  Job.tsx  Landing.tsx
client/src/services/: api.ts  socket.ts
comfyui/: README.md
comfyui/workflows/: full_pipeline.json  video_gen.json  voice_clone.json
server/: package.json  tsconfig.json
server/src/: index.ts
server/src/config/: env.ts
server/src/jobs/: pipeline.ts  store.ts
server/src/middleware/: upload.ts
server/src/routes/: health.ts  jobs.ts
server/src/services/: tts.ts  video.ts
tts-service/: .env.example  .gitignore  README.md  pyproject.toml
tts-service/app/: config.py  main.py  schemas.py
tts-service/app/models/: qwen_tts.py
tts-service/app/routes/: health.py  tts.py
tts-service/scripts/: test_quality.py
video-service/: .env.example  .gitignore  README.md  pyproject.toml
video-service/app/: __init__.py  config.py  dashscope.py  jobs.py  main.py  routes.py  schemas.py  storage.py
video-service/scripts/: test_dashscope.py
