[project]
name = "tts-service"
version = "0.1.0"
description = "Memorial AI voice cloning service (Qwen3-TTS) — FastAPI"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.20",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "soundfile>=0.12",
  "numpy>=1.26",
  "torch>=2.4",
  "torchaudio>=2.4",
  "qwen-tts>=0.1.0",
]

[dependency-groups]
dev = [
  "ruff>=0.7",
  "pytest>=8",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
